static/scss/partials/main.scss
/* ... */
.num-forwarded,
.is-enabled .column-forwarded .card-small-text,
.is-enabled .column-blocked {
  opacity: 1;
  transition: all 0.2s ease;
}

.num-forwarded,
.is-enabled .num-blocked {
  opacity: 0.3;
  transition: all 0.2s ease;
}

.column-forwarded .card-small-text,
.is-enabled .column-blocked .card-small-text {
  opacity: 0.5;
}

.num-remaining-aliases {
  margin-right: 4px;
}

.mobile-menu {
  position: relative;
  z-index: 1;
  overflow: hidden;
  min-height: 0;
  background: #2f2f54;
  transition: all 0.4s ease;
}

.menu-open {
  transition: all 0.4s ease;
}

.mobile-menu-toggle {
  border: none;
  outline: none;
  background: #2f2f54;
  z-index: 1;
}

.mobile-menu-label {
  position: relative;
  display: inline-block;
}

.mobile-menu-label::after {
  content: "";
  width: 18px;
  height: 18px;
  position: absolute;
  display: flex;
  background-image: url(/static/images/arrowhead-white.svg);
  background-repeat: no-repeat;
  background-position: center;
  top: 0;
  bottom: 0;
  margin: auto auto 1px auto;
  right: -26px;
  background-size: contain;
  opacity: 0.9;
  transition: all 0.4s ease;
}

.menu-open .mobile-menu-label::after {
  transform: rotate(180deg);
  opacity: 0.5;
  transition: all 0.4s ease;
}

.mobile-menu-toggle,
.mobile-menu-link {
  color: rgba(255, 255, 255, 1);
  width: 100%;
}

.mobile-menu-link {
  text-align: right;
  padding: 0.75em var(--rowFullWidthHPadding);
}

.mobile-home-link {
  border-bottom: 1px solid rgba(255, 255, 255, 0.04);
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.menu-open .mobile-menu-links {
  visibility: visible;
  pointer-events: all;
  transition: all 0.3s ease;
}

.mobile-menu-links {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  pointer-events: none;
  background: #2f2f54;
  box-shadow: inset 1px 3px 3px #20123a30;
  transition: all 0.3s ease;
}

.mobile-menu-link:hover {
  background: rgba(0, 0, 0, 0.05);
}

.mobile-menu-link:focus {
  box-shadow: var(--buttonFocus);
}

.mobile-menu-link:active {
  background: rgba(0, 0, 0, 0.1);
}

.faqs-wrapper {
  max-width: 1100px;
}

.faqs {
  flex-wrap: wrap;
}

.faq {
  margin-bottom: 3em;
}

.faq-col {
  flex: 0 1 46%;
  margin: 0;
}

.faqs-headline {
  margin: 3em 0 2em;
  font-size: 2em;
}

.faqs-headline,
.faq-headline {
  color: rgba(255, 255, 255, 1);
}

.faq-headline {
  font-size: 1.25em;
  line-height: 1.3;
  margin-top: 0;
  margin-bottom: 0.5em;
}

.faq-answer {
  color: var(--grey30);
  font-size: 1em;
  line-height: 1.7em;
  margin-top: 0;
}

.dashboard-banners.invisible {
  transition: all 0.2s ease;
  opacity: 0;
  padding: 0;
  max-height: 0;
}

.dashboard-banners.drop-shadow {
  box-shadow: 0 12px 18px 2px rgba(34,0,51,.04),0 6px 22px 4px rgba(7,48,114,.12),0 6px 10px -4px rgba(14,13,26,.12);
}

.banner-content.invisible {
  max-height: 0;
}

.dashboard-banners {
  width: 100%;
  opacity: 1;
  padding: 1em 0;
  transition: all 0.3s ease;
}

.banner-hl {
  font-size: 1.25rem;
  font-weight: 700;
  color: var(--ink)
}

.banner-hl,
.banner-sub {
  margin: 0 auto 10px 0;
}

.banner-sub {
  color: var(--bannerGray);
  font-size: 1rem;
  line-height: 1.4;
}

.banner-gradient-bg {
  background: var(--fxGradient);
  margin: 0 auto 2rem;
  border-radius: 9px;
  padding: 2px;
  width: 100%;
  position: relative;
  min-height: 0;
}

.banner-content {
  opacity: 1;
  background: $color-white;
  border-radius: 7px;
  padding: 2em 1.25em 2em 0;
  width: 100%;
  position: relative;
}

.banner-copy {
  padding: 0;
}

.banner-link {
  color: $color-blue-50;
  margin: 0 auto 0 -2px;
  padding: 2px;
  border-radius: 2px;
  font-size: 1rem;
  font-weight: 600;
}

.banner-link:hover {
  color: var(--blue4);
}

.banner-link:focus {
  box-shadow: var(--buttonFocus);
  outline: none;
}

.banner-link:active {
  color: var(--blue5);
}

.banner-logo {
  background-position: top center;
  background-size: contain;
  height: 60px;
  width: 60px;
  min-height: 60px;
  min-width: 60px;
  background-repeat: no-repeat;
  margin: 0 1.25rem 0 2.5rem;
}

.banner-relay-logo {
  background: none;
  position: relative;
}

.banner-relay-logo::after {
  content: "";
  width: 70px;
  height: 60px;
  position: absolute;
  left: 0;
  top: 0;
  display: block;
  background-image: url("/static/images/banner-addon.svg");
  background-repeat: no-repeat;
  background-position: top center;
  background-size: contain;
}

.banner-fx-logo {
  background-image: url("/static/images/logos/fx-logo.svg");
}

/* TODO: Replace MPP logo */
.banner-mpp-logo {
  background-image: url("/static/images/logos/mpp-temp-icon.png");
}

.dashboard-onboarding-header {
  margin: 3em auto 2rem auto;
  font-size: 20px;
  text-align: center;
  color: var(--ink);
}

.dashboard-onboarding-list {
  margin: auto;
  max-width: 500px;
  padding: 0;
}

.dashboard-onboarding-list-item {
  margin-bottom: 3em;
  color: var(--grey60);
  font-size: 15px;
  line-height: 1.5;
}

.dashboard-onboarding-list-item.tip-1 {
  position: relative;
}

.img-arrow-up {
  position: absolute;
  right: -138px;
  max-width: 218px;
  top: -88px;
}

.img-input-icon,
.img-context-menu {
  max-width: 300px;
  margin: 2em auto;
}

.onboarding-num {
  background: var(--ink);
  color: rgba(255, 255, 255, 1);
  height: 32px;
  width: 32px;
  min-width: 32px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  margin: .25em 1em auto 0;
}

.relay-stat {
  position: relative;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: flex;
  margin-left: 3em;
}

.nested-grid {
  cursor: default;
}
/* ... */

